# Python-J2534-Interface

./: .gitignore  AutoComm.py  CHANGELOG.md  IOCTL_EXAMPLES  ISO15765_TX_RX_EXAMPLE  J1850_VPW_TX_RX_EXAMPLE  J2534.py  J2534_Interface.py  J2534_Library.py  J2534_Unlock.py  LICENSE  List_Installed_J2534_Devices  MANIFEST.in  README.md  SCI_A_TX_RX_EXAMPLE  SCI_B_TX_RX_EXAMPLE  pyproject.toml  requirements.txt  setup.py  thanks
AutoJ2534/: EcuParameters.py  Interface.py  README.md  __init__.py  ecu_parameters.py  negative_response_codes.py
AutoJ2534/examples/: README.md
AutoJ2534/examples/customtkinter_example/: README.md  main.py  requirements.txt
AutoJ2534/examples/pyqt5_example/: README.md  main.py  requirements.txt
AutoJ2534/examples/pysimplegui_example/: README.md  main.py  requirements.txt
AutoJ2534/examples/tkinter_example/: README.md  main.py  requirements.txt
J2534/: Define.py  Error.py  LICENSE  README.md  Registry.py  __init__.py  api.py  config.py  constants.py  dll.py  dllLoader.py  dll_interface.py  exceptions.py  logging_utils.py  structures.py  wrapper.py
J2534/examples/: README.md
J2534/examples/customtkinter_example/: main.py
J2534/examples/pyqt5_example/: main.py
J2534/examples/pysimplegui_example/: main.py
J2534/examples/tkinter_example/: main.py
J2534_REGISTRY/: README.md  __init__.py  device_info.py  registry_scanner.py
J2534_REGISTRY/examples/: README.md
J2534_REGISTRY/examples/customtkinter_registry_viewer/: main.py
J2534_REGISTRY/examples/pyqt5_registry_viewer/: main.py
J2534_REGISTRY/examples/pysimplegui_registry_viewer/: main.py
J2534_REGISTRY/examples/tkinter_registry_viewer/: main.py
